name:                Uthenga
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/ArekCzarnik/Uthenga#readme
license:             BSD3
license-file:        LICENSE
author:              Arek Czarnik
maintainer:          arekczarnik@gmail.com
copyright:           2017 Arek Czarnik
category:            Devops
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Disque
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , transformers
                     , aeson
                     , hedis
  default-language:    Haskell2010

executable Uthenga-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , hspec
                     , HUnit
                     , QuickCheck
                     , SMSGateway
  default-language:    Haskell2010

test-suite Uthenga-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , text
                     , hspec
                     , HUnit
                     , QuickCheck
                     , SMSGateway
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ArekCzarnik/Uthenga
